rest-api/deployment/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-api
  template:
    metadata:
      labels:
        app: ecom-api
    spec:
      containers:
        - name: ecom-api
          image: ndraaa/ecom-thesis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "250Mi"
              cpu: "100m"
            limits:
              memory: "750Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: ecom-api
  namespace: default
  labels:
    app: ecom-api
    service: ecom-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: ecom-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
