rest-api/deployment/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: metrics
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090 # you can choose in the range 30000–32767
